Corrected h1 padding, now looks better on smaller screens.

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -22,6 +22,7 @@ body{
 
 h1{
 	font-size: 36px;
+  padding: 0.25em;
 }
 h2{
 	font-size: 36px;
